tests/pass/0002_print_5.ee
fn main() {
    debugPrint(5);
}
