tests/fail/0029_unknown_variable_in_taken_if_branch.ee
fn main() {
    if (true) {
        debugPrint(missing);
    }
}
